
2018-03-30  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c (validate_move): fixed segfault with zero-length hex literal.

2018-03-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (build_cond_88): for VALUE THRU pass generation of this
	  clause by temporarily changing current_statement->name, changed
	  generation of the two conditions to the more natural variant
	  "var >= a && var <= b" instead of "a <= var && var <= b"
	* tree.c (compare_field_literal): added warning for numerical values
	  when compared against their maximum value
	* codegen.c (codegen): generate some comments only when relevant

2018-03-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* field.c (validate_any_length_item): fixed missing error position
	* tree.c (word_hash): renamed from hash
	* tree.c: check for alphabetic after checking for more common
	  USAGE/categories

2018-03-24  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c, tree.h: emit error if RECORD VARYING has equal implied limits.
	* reserved.c: replaced most instances of cb_strcasecmp with strcmp for
	  efficiency.

2018-03-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_fits_int, cb_fits_long_long, cb_get_int, cb_get_long_long,
	  cb_get_u_long_long): adjust literal size with negative scale

2018-03-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_move): speedup, especially for programs not
	  defining any reports

2018-03-14  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* scanner.l, parser.y: new token LEVEL_NUMBER for clear separated
	  handling from WORD (and minimal speedup in scanning)
	* field.c (cb_get_level, cb_build_field_tree): simplified level
	  handling as we only have valid level numbers in this tree
	* parser.y (data_description): removed early free of level number
	  token that results in invalid calls to (cobc_parse_free)
	* parser.y (_data_description_clause_sequence, add_body): simplified