@@ -221,6 +221,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		unconformable
 missing-statement:			error
+zero-length-literals:			unconformable
 
 # archaic in COBOL2002 and currently not available as dialect features:
 # 1: MOVE of alphanumeric figurative constants to numeric items
