@@ -221,6 +221,7 @@ record-delimiter:			ignore
 sequential-delimiters:			unconformable
 record-delim-with-fixed-recs:		unconformable
 missing-statement:			warning		# not verified yet
+zero-length-literals:			unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
