@@ -109,6 +109,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
 missing-statement:			+warning
+zero-length-literals:			ok
 
 
 # use complete word list
