@@ -224,6 +224,7 @@ record-delimiter:			ok
 sequential-delimiters:			ok
 record-delim-with-fixed-recs:		ok
 missing-statement:			warning		# not verified yet
+zero-length-literals:			unconformable
 
 
 # use fixed word list, synonyms and exceptions specified there
