@@ -495,6 +495,7 @@ test.conf: missing definitions:
 	no definition of 'sequential-delimiters'
 	no definition of 'record-delim-with-fixed-recs'
 	no definition of 'missing-statement'
+	no definition of 'zero-length-literals'
 ])
 
 AT_CLEANUP
