@@ -1,4 +1,8 @@
 
+2018-03-31  Edward Hart <edward.dan.hart@gmail.com>
+
+	* general: added zero-length-literals option.
+
 2018-03-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* general: added move-figurative-space-to-numeric, set to OK for
